--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<div class="Photo"><img src="https://ms1.103.by/images/973b459bc53e340ad931d009e9628f01/thumb/point=top-center,w=208,h=208,q=80,watermark=false/catalog_staff_photo/06/ff/e6/06ffe6ae107888ee2217b8a05c34a1d7.jpg" alt="Дегтярева Елена Петровна"><img src="https://ms1.103.by/images/973b459bc53e340ad931d009e9628f01/thumb/point=top-center,w=208,h=208,q=80,watermark=false/catalog_staff_photo/06/ff/e6/06ffe6ae107888ee2217b8a05c34a1d7.jpg" class="StaffPage__logoShadow"></div>
+<div class="Photo">
+  <img src="https://ms1.103.by/images/973b459bc53e340ad931d009e9628f01/thumb/point=top-center,w=208,h=208,q=80,watermark=false/catalog_staff_photo/06/ff/e6/06ffe6ae107888ee2217b8a05c34a1d7.jpg" alt="Дегтярева Елена Петровна">
+</div>
 <div class="About"><p><b>Врач-офтальмолог 1-й категории</b></p>
 <p><b>Стаж работы:</b> 30 лет</p>
 <p><b>Область профессиональных интересов:</b></p>
